--- a/index.qmd
+++ b/index.qmd
@@ -7,7 +7,7 @@ format:
     # theme: quartz
     toc: true
     toc-title: Nesta página
-    toc-location: left
+    toc-location: right
     html-math-method: katex
     css: style.css
     self-contained: false
@@ -22,12 +22,14 @@ format:
 
 {{< include sections/_scrapy.md >}}
 
+{{< include sections/_SLR.md >}}
+
+
 {{< include sections/_classification.md >}}
 
 {{< include sections/_syntesis.md >}}
 
 {{< include sections/_recommedation.md >}}
 
-{{< include sections/_SLR.md >}}
 
 
