--- a/references.bib
+++ b/references.bib
@@ -28,6 +28,7 @@ issn={2184-3252},
 @unpublished{recommend22,
 author       ={Jo\~{a}o Gabriel de Moraes Souza. and Daniel Oliveira Cajueiro. and Johnathan de O. Milagres. and Vin\´{i}cius de Oliveira Watanabe. and V\´{i}tor Bandeira Borges. and Victor Rafael Celestino.},
 title        ={A comprehensive review of recommendation systems: method, data, evaluation and coding},
+url = {https://github.com/mcti-sefip/NLP-MCTI-PPF/blob/web/sections/recommendation_systems.pdf}
 }
 
 
